[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Player/Flamethrower/flamethrower.tres" type="Texture" id=1]
[ext_resource path="res://TestEnv/TestPlayer.gd" type="Script" id=2]
[ext_resource path="res://TestEnv/TestBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Animations/PlayerAnimStateMachine.tres" type="AnimationNodeAnimation" id=4]
[ext_resource path="res://Assets/Player/Dash/dash_0.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Dash/dash_1.tres" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Walk/walk_2.tres" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Walk/walk_0.tres" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Walk/walk_1.tres" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Death/fall_1.tres" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Jump/jump.tres" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Shield/shield_1.tres" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Shield/shield_0.tres" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Death/fall.tres" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Head/Head_0.tres" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 32 )

[sub_resource type="Animation" id=4]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Hand" type="Sprite" parent="Body"]
position = Vector2( -10.45, -16.3 )
rotation = -0.0457078
texture = ExtResource( 1 )
offset = Vector2( 15, 10 )

[node name="BulletSpawner" type="Node2D" parent="Body/Hand"]
position = Vector2( 37.5675, 10.8098 )

[node name="Head" type="Sprite" parent="Body"]
position = Vector2( 0, -41 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
